# quippy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: prefix_files.cmake
cmake/Hunter/: config.cmake
hunter/_Base/Download/Hunter/0.18.15/57991b4/: SHA1
include/: quippy.hpp
include/quippy/: channel.hpp  channel_impl.hpp  channel_service.hpp  config.hpp.in  connector.hpp  connector_impl.hpp  connector_service.hpp  error.hpp  handlers.hpp  notstd.hpp  sm.hpp
include/quippy/connector_impl/: concept.hpp  concept_fwd.hpp  connector_impl_.hpp  traits.hpp  transport_connecting.hpp  transport_shutting_down.hpp  transport_up.hpp
include/quippy/connector_impl/functors/: error_halted.hpp
include/quippy/connector_impl/states/: halted_state.hpp  send_data.hpp
include/quippy/detail/: connection.hpp  connection_handle.hpp  connection_handler.hpp  has_environment.hpp  io_object.hpp  result_or_error.hpp  send_buffer.hpp
include/quippy/error/: transport_category.hpp
include/quippy/event/: base.hpp  connect_protocol.hpp  connect_tcp.hpp  halt.hpp
include/quippy/notstd/: apply.hpp  config.hpp  invoke.hpp
include/quippy/sm/: config.hpp  default_transition.hpp  invoke_state_names.hpp
src/: connector.cpp  connector_impl.cpp  version.cpp.in
src/connector_impl/: concept.cpp  transport_up.cpp
src/detail/: connection.cpp  connection_handler.cpp
test/: test1.cpp
